# deepbait

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
checkpoints/exp1_direct/: history.json
checkpoints/exp1_direct_seed17/: history.json
checkpoints/exp1_direct_seed99/: history.json
checkpoints/exp2_finetune/: history.json
checkpoints/exp2_finetune_seed17/: history.json
checkpoints/exp2_finetune_seed99/: history.json
checkpoints/exp2_pretrain/: history.json
checkpoints/exp2_pretrain_seed17/: history.json
checkpoints/exp2_pretrain_seed99/: history.json
checkpoints/exp3_bart/checkpoint-1422/: config.json  tokenizer_config.json  trainer_state.json
checkpoints/exp3_bart/checkpoint-474/: trainer_state.json
checkpoints/exp3_bart_seed17/best_model/: tokenizer_config.json
checkpoints/exp3_bart_seed17/checkpoint-1422/: trainer_state.json
checkpoints/exp3_bart_seed17/checkpoint-2370/: trainer_state.json
checkpoints/exp3_bart_seed99/checkpoint-2370/: generation_config.json  trainer_state.json
checkpoints/exp3_bart_seed99/checkpoint-948/: trainer_state.json
data/: download_data.sh
docs/: neurips_2023.sty  plan.md  report.tex
docs/presentation/: presentation_slide.tex
notebooks/: demo.ipynb
presentation/: main.tex  script.md
scripts/: build_vocab.py  download_bart.py  generate_bart.py  run_bart_finetune.py  run_direct.py  run_pretrain_finetune.py
src/: data_processing.py  evaluate.py  generate.py  model.py  train.py
